--- a/index.html
+++ b/index.html
@@ -166,8 +166,19 @@
             </div>
         </section>
         <section id="log">
+            <div class="logblock" id="20">
+                <h1 class="title">KBot Docs 20</h1>
+                <div class="big">
+                    <li>내용 추가
+                        <ul>
+                            <li>라이노 엔진 > 내장 함수(uneval(), isFinite(), isNaN(), parseFloat(), parseInt(), encodeURI(), encodeURIComponent(), decodeURI(), decodeURIComponent()) 추가작성</li>
+                            <li>라이노 엔진 > 예외 작성</li>
+                        </ul>
+                    </li>
+                </div>
+            </div>
             <div class="logblock" id="19">
-                <h1 class="title">Kakaotalk Bot Docs 19</h1>
+                <h1 class="title">KBot Docs 19</h1>
                 <div class="big">
                     <li>KBotHub 계정 도입 (아래의 기능을 더 편히 사용하기 위해 계정 가입을 추천합니다.)</li>
                     <li>새로운 디자인 구성
