--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
             </div>
         </section>
         <section id="log">
+            <div class="logblock" id="20.1">
+                <h1 class="title">Kakaotalk Bot Docs 20.1</h1>
+                <div class="big"
+                    <li>다크 테마 색상 수정</li>
+                    <li>코드박스 디자인 변경</li>
+                </div>
+            </div>
             <div class="logblock" id="20">
                 <h1 class="title">KBot Docs 20</h1>
                 <div class="big">
