--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <section id="log">
             <div class="logblock" id="20.1">
                 <h1 class="title">Kakaotalk Bot Docs 20.1</h1>
-                <div class="big"
+                <div class="big">
                     <li>다크 테마 색상 수정</li>
                     <li>코드박스 디자인 변경</li>
                 </div>
